[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend challenge for the MaisTODOS position"
authors = ["cossalter <menegassehugo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-creditcard = {git = "https://github.com/maistodos/python-creditcard.git", rev = "main"}
ruff = "^0.1.6"
pytest = "^7.4.3"
freezegun = "^1.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
httpx = "^0.25.2"
pytest-mock = "^3.12.0"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
